k8s/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python
        image: ${ECR_URL}/${PYTHON_REPO}:${BUILD_NUMBER}
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: python-svc
  labels:
    app: python-svc
spec:
  selector:
    app: python
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5002
